--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.4.0",
+    "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.1.0",
     "helmet": "^6.0.1",
