--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 URL=postgresql://postgres:l2iLPBz53rXKyOaIPVlZ@containers-us-west-147.railway.app:6913/railway
 SECRET="tokenSecreto"
+EMAIL_INKCLOUDJ="INKCLOUDJ@hotmail.com"
+EMAIL_INKCLOUDJ_PASSWORD="Henry1234"
